# ownscribe-app

./: .gitignore  Info.plist  Ownscribe.entitlements  Package.swift  README.md  bundle.sh  pyproject.toml
Sources/Ownscribe/: AskView.swift  CLI.swift  HistoryView.swift  MarkdownText.swift  MeetingStore.swift  OwnscribeApp.swift  RecordView.swift  Recorder.swift  SettingsView.swift  VideoRecorder.swift
ownscribe/: __init__.py  cli.py  config.py  context.py  live.py  pipeline.py  progress.py  search.py  video.py
ownscribe/audio/: base.py  coreaudio.py  sounddevice_recorder.py
ownscribe/output/: json_output.py  markdown.py
ownscribe/summarization/: __init__.py  base.py  llama_cpp_summarizer.py  ollama_summarizer.py  openai_summarizer.py  prompts.py
ownscribe/transcription/: base.py  models.py  whisperx_transcriber.py
