[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ownscribe"
version = "0.14.0"
description = "Fully local meeting transcription and summarization CLI, with live transcription and folder-grounded in-call question suggestions."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "shyamzzp" }]
dependencies = [
    "click>=8.1",
    "sounddevice>=0.5",
    "soundfile>=0.13",
    "numpy>=1.26",
    "whisperx>=3.8",
    "faster-whisper>=1.0",
    "pyannote-audio>=4.0",
    "llama-cpp-python>=0.3",
    "huggingface-hub>=0.20",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4"]
openai = ["openai>=1.0"]
all = ["ollama>=0.4", "openai>=1.0"]

[project.scripts]
ownscribe = "ownscribe.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["ownscribe"]
